Add web API for authorization of place revisions
