# ofdb-entities/src/authorization.rs
@@ -1,7 +1,7 @@
 use crate::{id::Id, review::ReviewStatus, revision::Revision, time::TimestampMs};
 
 #[derive(Debug, Clone, PartialEq, Eq)]
-pub struct AuthorizedRevision {
+pub struct ReviewedRevision {
     pub revision: Revision,
     pub review_status: Option<ReviewStatus>,
 }
@@ -10,12 +10,11 @@ pub struct AuthorizedRevision {
 pub struct PendingAuthorizationForPlace {
     pub place_id: Id,
     pub created_at: TimestampMs,
-    pub last_authorized: Option<AuthorizedRevision>,
+    pub last_authorized: Option<ReviewedRevision>,
 }
 
 #[derive(Debug, Clone, PartialEq, Eq)]
 pub struct AuthorizationForPlace {
     pub place_id: Id,
-    pub created_at: TimestampMs,
-    pub authorized: AuthorizedRevision,
+    pub authorized: Option<ReviewedRevision>,
 }
